parser/src/snapshots/parser__tokenizer_test__assignment_with_let.snap
---
source: parser/src/tokenizer_test.rs
expression: "format!(\"{}\\n\\n{:#?}\", source, tokens)"
---
let x = 47

[
    KeywordLet(
        0,
        3,
    ),
    Identifier(
        4,
        5,
    ),
    Equal(
        6,
        7,
    ),
    DecimalDigits(
        8,
        10,
    ),
]
