parser/src/snapshots/parser__tokenizer_test__identifier_camel_cased.snap
---
source: parser/src/tokenizer_test.rs
expression: "format!(\"{}\\n\\n{:#?}\", source, tokens)"
---
myName

[
    Identifier(
        0,
        6,
    ),
]
