parser/src/snapshots/parser__tokenizer_test__identifier_kebab_cased.snap
---
source: parser/src/tokenizer_test.rs
expression: "format!(\"{}\\n\\n{:#?}\", source, tokens)"
---
my-name

[
    Identifier(
        0,
        7,
    ),
]
