parser/src/snapshots/parser__tokenizer_test__identifier_snake_cased.snap
---
source: parser/src/tokenizer_test.rs
expression: "format!(\"{}\\n\\n{:#?}\", source, tokens)"
---
my_name

[
    Identifier(
        0,
        7,
    ),
]
