parser/src/snapshots/parser__tokenizer_test__identifiers.snap
---
source: parser/src/tokenizer_test.rs
expression: "format!(\"{}\\n\\n{:#?}\", source, tokens)"
---
hello world

[
    Identifier(
        0,
        5,
    ),
    Identifier(
        6,
        11,
    ),
]
