parser/src/snapshots/parser__tokenizer_test__numbers.snap
---
source: parser/src/tokenizer_test.rs
expression: "format!(\"{}\\n\\n{:#?}\", source, tokens)"
---
1 2 3 4

[
    DecimalDigits(
        0,
        1,
    ),
    DecimalDigits(
        2,
        3,
    ),
    DecimalDigits(
        4,
        5,
    ),
    DecimalDigits(
        6,
        7,
    ),
]
