parser/src/snapshots/parser__tokenizer_test__numbers_octal.snap
---
source: parser/src/tokenizer_test.rs
expression: "format!(\"{}\\n\\n{:#?}\", source, tokens)"
---
0o755 0o01

[
    OctalDigits(
        0,
        5,
    ),
    OctalDigits(
        6,
        10,
    ),
]
